# NIDS

./: .gitignore  Cargo.toml  README.md  rules.json  simulation.sh
benches/: ids_benchmarks.rs
src/: alert.rs  capture.rs  dashboard.rs  engine.rs  lib.rs  locality.rs  main.rs  parser.rs
