[package]
name = "network-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
etherparse = "0.20.2"
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ids_benchmarks"
harness = false




